--- a/utilities/timer/index.html
+++ b/utilities/timer/index.html
@@ -126,6 +126,7 @@
         </div>
     </div>
 
+    <script src="script.js"></script>
     <script>
         const minutesInput = document.getElementById('minutes');
         const secondsInput = document.getElementById('seconds');
