Add link to dedicated script file

--- a/utilities/rng/index.html
+++ b/utilities/rng/index.html
@@ -258,6 +258,7 @@
         <div class="history" id="history"></div>
     </div>
 
+    <script src="script.js"></script>
     <script>
         // Wrap your entire script in a DOMContentLoaded event to ensure all elements are loaded
         document.addEventListener('DOMContentLoaded', function () {
