--- a/utilities/decision_wheel/index.html
+++ b/utilities/decision_wheel/index.html
@@ -344,6 +344,7 @@
         <div class="color-picker" id="colorPicker"></div>
     </div>
 
+    <script src="script.js"></script>
     <script>
         // DOM Elements
         const wheel = document.getElementById('wheel');
