Add link to combinatorics util

--- a/utilities/index.html
+++ b/utilities/index.html
@@ -64,6 +64,7 @@
     <a href="decision_wheel/index.html" class="game-link">decision wheel</a>
     <a href="yes_no/index.html" class="game-link">yes/no button</a>
     <a href="timer/index.html" class="game-link">timer</a>
+    <a href="combinatorics/index.html" class="game-link">combinatorics</a>
   </div>
 
 
