Add reference for math games

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
   <a href="minigames/cps/index.html" class="game-link">cps tester</a>
   <div>
     <a href="minigames/typing_practice_hub/hub.html" class="game-link">typing practice</a>
+    <a href="minigames/math_games/hub.html" class="game-link">math practice</a>
   </div>
   <div>
     <a href="minigames/number_memory/index.html" class="game-link">number memory</a>
