Remove reference for percentage calculation
Will be moved to math games

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </div>
   <div>
     <a href="minigames/number_memory/index.html" class="game-link">number memory</a>
-    <a href="minigames/percentage_calculation/index.html" class="game-link">percentage practice</a>
+    <!-- <a href="minigames/percentage_calculation/index.html" class="game-link">percentage practice</a> -->
     <a href="minigames/logic_games/memory_match/index.html" class="game-link">memory match</a>
   </div>
   <!--   <div>
