Update path for v1

--- a/minigames/math_games/hub.html
+++ b/minigames/math_games/hub.html
@@ -19,7 +19,7 @@
   <a href="percentage_calculation/index.html" class="mode-link">Percentage Calculation Practice</a>
 </div>
 <div>
-  <a href="mult_table/v1.html" class="mode-link">Multiplication Table V1</a>
+  <a href="mult_table/v1/v1.html" class="mode-link">Multiplication Table V1</a>
   <a href="mult_table/v2.html" class="mode-link">Multiplication Table V2</a>
   <script src="script.js"></script>
 
