--- a/minigames/math_games/mult_table/v1/v1.html
+++ b/minigames/math_games/mult_table/v1/v1.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multiplication Quiz</title>
     <link rel="stylesheet" href="styles.css" />
-    <style>
-        
-    </style>
 </head>
 <body data-theme="dark">
     <button class="theme-toggle" onclick="toggleTheme()">
@@ -46,8 +43,6 @@
         </div>
     </div>
 
-    <script src="script.js">
-        
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
